# GlushkovizerApp-GTK4

./: Cargo.toml  README.md  build.rs
resources/: automata_page.blp  automata_page.ui  glushkovizer.blp  glushkovizer.ui  resources.gresource.xml  style.scss
src/: main.rs  utils.rs
src/glushkovizerapp/: imp.rs  mod.rs
src/glushkovizerapp/automata_page/: imp.rs  mod.rs
wix/: main.wxs
