[package]
name = "glushkovizer-gtk4"
version = "0.4.0"
edition = "2021"

[dependencies]
gtk = { version = "0.8", package = "gtk4", features = ["v4_14"] }
glushkovizer = { git = "https://github.com/Lurgrid/Glushkovizer" }
adw = { optional = true, version = "0.6", package = "libadwaita", features = [
    "v1_5",
] }
serde_json = "1"

[build-dependencies]
glib-build-tools = "0.19"

[features]
default = ["dep:adw"]
no-adwaita = []
no-blp = []
