[package]
name = "glushkovizer-gtk4"
version = "0.4.0"
edition = "2021"
description = "Graphical application using the Glushkovizer library to transform a regular expression into an automaton and represent it and its orbits "
authors = ["Lurgrid <lurgrid@sagbot.com>"]
repository = "https://github.com/Lurgrid/GlushkovizerApp-GTK4"

[package.metadata.wix]
upgrade-guid = "F2208140-D2D8-4C62-850A-17D4C5FC79AB"
path-guid = "570A7EEF-6B91-4F7D-9A9D-A173F623A8A4"
license = false
eula = false

[dependencies]
gtk = { version = "0.8", package = "gtk4", features = ["v4_14"] }
glushkovizer = { rev = "e9a70e0", git = "https://github.com/Lurgrid/Glushkovizer" }
adw = { optional = true, version = "0.6", package = "libadwaita", features = [
    "v1_5",
] }
serde_json = "1"

[build-dependencies]
glib-build-tools = "0.19"

[features]
default = ["dep:adw"]
no-adwaita = []
no-blp = []

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.15.1"
# CI backends to support
ci = "github"
# The installers to generate for each app
installers = ["shell", "powershell", "msi"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu", "x86_64-pc-windows-msvc"]
# Publish jobs to run in CI
pr-run-mode = "plan"
# Whether to install an updater program
install-updater = true
