[package]
name = "glushkovizer-gtk4"
version = "0.6.0"
edition = "2021"
description = "Graphical application using the Glushkovizer library to transform a regular expression into an automaton and represent it and its orbits "
authors = ["Lurgrid <lurgrid@sagbot.com>"]
repository = "https://github.com/Lurgrid/GlushkovizerApp-GTK4"

[dependencies]
gtk = { version = "0.8", package = "gtk4", features = ["v4_14"] }
glushkovizer = { git = "https://github.com/Lurgrid/Glushkovizer" }
adw = { version = "0.6", package = "libadwaita", features = ["v1_5"] }
serde_json = "1"

[build-dependencies]
glib-build-tools = "0.19"

[features]
no-blp = []
